objects/pse__Timecard_Header__c.object
<CustomObject>
    <customHelpPage>pse__TimecardHelp</customHelpPage>
    <description>Records the hours and days worked by a resource in a given week. Timecards are associated with a project and may also be logged against an assignment or milestone, or against one or more project tasks. Resources can submit multiple timecards on the Timecard Entry page, accessed by clicking either “Log a Timecard - New UI” or “Log a Timecard with Task Time” on the PSA Links sidebar (depending on whether your organization logs time against project tasks). This object is named Timecard_Header (API name pse__Timecard_Header__c) and has a master-detail relationship with timecard splits.</description>
    <fields>
        <fullName>Project_Account_ID__c</fullName>
        <formula>pse__Project__r.TR_PS_Enterprise_Project_Account_Id__c</formula>
        <label>Project Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Account_Name__c</fullName>
        <formula>pse__Project__r.TR_PS_Enterprise_Project_Account_Name__c</formula>
        <label>Project Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Additional_Notes__c</fullName>
        <description>If aggregated timecards notes on TCEntry UI for similar rows exceeds the limit of 255 chars, then the aggregated notes will be saved in it.</description>
        <inlineHelpText>If aggregated timecards notes on TCEntry UI for similar rows exceeds the limit of 255 chars, then the aggregated notes will be saved in it.</inlineHelpText>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Admin_Global_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Admin to make &apos;global&apos; changes to the Timecard, including edits to the Timecard&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</description>
        <inlineHelpText>If checked, allows Admin to make &apos;global&apos; changes to the Timecard, including edits to the Timecard&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</inlineHelpText>
        <label>Admin Global Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked when the Timecard is approved - typically by a workflow driven by the Status field.</description>
        <inlineHelpText>This checkbox should be checked when the Timecard is approved - typically based on the Status field.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The current approver for the timecard.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assignment Name to which the timecard belongs.</inlineHelpText>
        <label>Assignment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Assignment__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Audit_Notes_History__c</fullName>
        <description>Stores audit notes history. When a user changes a project or assignment using the Timecard UI and the audit notes exceed 255 characters, older audit notes are moved and appended here.</description>
        <inlineHelpText>Stores audit notes history. When a user changes a project or assignment using the Timecard UI and the audit notes exceed 255 characters, older audit notes are moved and appended here.</inlineHelpText>
        <label>Audit Notes History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Rate_Defaulted_from_Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Timecard Bill Rate was initially defaulted from a Milestone (rather than an Assignment).</description>
        <inlineHelpText>Indicates that the Timecard Bill Rate was initially defaulted from a Milestone (rather than an Assignment).</inlineHelpText>
        <label>Bill Rate Defaulted from Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>The hourly or daily rate billed for the resource.</inlineHelpText>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether the hours on the timecard can be charged to a customer.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the timecard has been charged to the project or customer.</inlineHelpText>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>The hourly or daily costs incurred for the resource.</inlineHelpText>
        <label>Cost Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Currency_Code__c</fullName>
        <label>Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Exchange_Rate__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>Cost Rate Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard</description>
        <inlineHelpText>Cost Rate Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard</inlineHelpText>
        <label>Cost Rate Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate__c</fullName>
        <formula>pse__Cost_Rate_Currency_Code__c &amp; &apos; &apos;  &amp; TEXT(ROUND(pse__Cost_Rate_Amount__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The hourly or daily cost rate incurred for the resource.</inlineHelpText>
        <label>Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Bill_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the Bill Rate is an hourly rate or a daily rate.</inlineHelpText>
        <label>Bill Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the Cost Rate is an hourly rate or a daily rate.</inlineHelpText>
        <label>Cost Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Days_Worked_Override__c</fullName>
        <description>Provides ability to override number of days calculation</description>
        <inlineHelpText>Provides ability to override number of days calculation</inlineHelpText>
        <label>Days Worked Override</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Disable_Approval_Auto_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this should disable any PSA trigger-based automatic submit for approval for the Timecard.</description>
        <inlineHelpText>If checked, this should disable any PSA trigger-based automatic submit for approval for the Timecard.</inlineHelpText>
        <label>Disable Approval Auto Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <inlineHelpText>End date for the week that the timecard covers.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Time_To_Completion__c</fullName>
        <inlineHelpText>Estimated time to completion. When ETC is entered on a timecard, it is populated in the assignment when the timecard is submitted or Include in Financials is set to true.</inlineHelpText>
        <label>Estimated Time To Completion</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Utilization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this timecard is excluded from utilization calculations.</description>
        <inlineHelpText>When selected, this timecard is excluded from utilization calculations.</inlineHelpText>
        <label>Exclude from Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this should check the Exclude from Billing checkbox on the child Timecard Splits, which has the same effect as Billing Hold, but is intended to reflect a permanent exclusion from Billing Generation.</description>
        <inlineHelpText>If checked, this should check the Exclude from Billing checkbox on the child Timecard Splits, which has the same effect as Billing Hold, but is intended to reflect a permanent exclusion from Billing Generation.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Daily_Maximum__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the timecard is excluded from the maximum number of hours set in the max-resource-hours-per-day configuration option that can be entered per day for a resource. See &quot;max-resource-hours-per-day&quot;.</description>
        <inlineHelpText>Indicates whether the timecard is excluded from the maximum number of hours set in the max-resource-hours-per-day configuration option that can be entered per day for a resource. See &quot;max-resource-hours-per-day&quot;.</inlineHelpText>
        <label>Exclude from Daily Maximum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__External_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the resource is an employee of the company or an external contractor.</inlineHelpText>
        <label>External Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Friday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Friday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Friday_Notes__c</fullName>
        <label>Friday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Hours_To_Days_Rule_Assignment__c</fullName>
        <formula>pse__Assignment__r.pse__Hours_to_Days_Rule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours To Days Rule (Assignment)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Hours_To_Days_Rule_Project__c</fullName>
        <formula>pse__Project__r.pse__Hours_to_Days_Rule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours To Days Rule (Project)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the timecard is to be included in the financial roll-ups to the project and RPG</inlineHelpText>
        <label>Include In Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the customer has been invoiced.</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Location_Fri__c</fullName>
        <label>Location - Fri</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Mon__c</fullName>
        <label>Location - Mon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Sat__c</fullName>
        <label>Location - Sat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Sun__c</fullName>
        <label>Location - Sun</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Thu__c</fullName>
        <label>Location - Thu</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Tue__c</fullName>
        <label>Location - Tue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>